--- a/flex-timehouse/flex-timehouse_ten.html
+++ b/flex-timehouse/flex-timehouse_ten.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/css_reset.css">
-    <link rel="stylesheet" href="css/try.css">
+    <link rel="stylesheet" href="../css/css_reset.css">
+    <link rel="stylesheet" href="css/flex-timehouse_ten.css">
 
 </head>
 
