--- a/try.html
+++ b/try.html
@@ -11,50 +11,46 @@
 </head>
 
 <body>
-
-    <div class="wrap">
-        <div class="category">
-            <h2 class="h2">甜點類別</h2>
-            <ul class="category_items">
-                <li class="bg">所有甜點 (45)</li>
-                <li>本日精選 (10)</li>
-                <li>人氣精選 (26)</li>
-                <li>新品上市 (12)</li>
-            </ul>
-        </div>
+    <div class="dessert_menu">
         <ul class="dessert">
             <li>
-                <img src="https://hexschool.github.io/flexImgUrl/10/pic1.png" alt="">
-                <div class="dessert_name">
-                    <span class="name">焦糖甜甜圈</span>
-                    <span class="NT">NT$ 450</span>
+                <div class="phpto">
+                    <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-1.png?raw=true"
+                        alt="dessert_photo" class="p">
+                    <a href="#">
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
+                            alt="heart" class="heart">
+                    </a>
+                    <span class="mark bg-3F5D45">本日精選</span>
                 </div>
-                <a href="#" class="addcart bg">
-                    加入購物車
-                </a>
             </li>
             <li>
-                <img src="https://hexschool.github.io/flexImgUrl/10/pic2.png" alt="">
-                <div class="dessert_name">
-                    <span class="name">焦糖甜甜圈</span>
-                    <span class="NT">NT$ 450</span>
+                <div class="phpto">
+                    <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-1.png?raw=true"
+                        alt="dessert_photo" class="p">
+                    <a href="#">
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
+                            alt="heart" class="heart">
+                    </a>
+                    <span class="mark bg-3F5D45">本日精選</span>
                 </div>
-                <a href="#" class="addcart bg">
-                    加入購物車
-                </a>
             </li>
             <li>
-                <img src="https://hexschool.github.io/flexImgUrl/10/pic3.png" alt="">
-                <div class="dessert_name">
-                    <span class="name">焦糖甜甜圈</span>
-                    <span class="NT">NT$ 450</span>
+                <div class="phpto">
+                    <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-1.png?raw=true"
+                        alt="dessert_photo" class="p">
+                    <a href="#">
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
+                            alt="heart" class="heart">
+                    </a>
+                    <span class="mark bg-3F5D45">本日精選</span>
                 </div>
-                <a href="#" class="addcart bg">
-                    加入購物車
-                </a>
             </li>
         </ul>
     </div>
+
+
+
 
 </body>
 
