--- a/weekone.html
+++ b/weekone.html
@@ -34,9 +34,9 @@
                 <h3 class="item_title">Vito Evans</h3>
                 <ul class="item_content">
                     <li class="mb-8">456 Walnut Avenue, Someville, USA</li>
-                    <li class="mb-8">+1 123 456 7890</li>
-                    <li class="mb-8">info@hexschool.com</li>
-                    <li>www.infohexschool.com</li>
+                    <li class="mb-8"><a href="tel:+1 123 456 7890">+1 123 456 7890</a></li>
+                    <li class="mb-8"><a href="mailto:info@hexschool.com">info@hexschool.com</a></li>
+                    <li><a href="www.infohexschool.com">www.infohexschool.com</a></li>
                 </ul>
             </div>
             <div class="card">
@@ -84,29 +84,29 @@
         </main>
     </div>
     <footer class="footer">
-        <div class="container">
-            <ul class="icon">
-                <li class="spacing">
-                    <a href="#">
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/fb.png?raw=true"
-                            alt="Facebook">
-                    </a>
-                </li>
-                <li class="spacing">
-                    <a href="#">
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/instagram.png?raw=true"
-                            alt="instagram">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img class="pp"
-                            src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/line.png?raw=true"
-                            alt="Line">
-                    </a>
-                </li>
-            </ul>
-        </div>
+        <!-- <div class="container"> -->
+        <ul class="icon">
+            <li class="spacing">
+                <a href="#">
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/fb.png?raw=true"
+                        alt="Facebook">
+                </a>
+            </li>
+            <li class="spacing">
+                <a href="#">
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/instagram.png?raw=true"
+                        alt="instagram">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img class="pp"
+                        src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/line.png?raw=true"
+                        alt="Line">
+                </a>
+            </li>
+        </ul>
+        <!-- </div> -->
 
     </footer>
 
