--- a/homework/before_class2_homework.html
+++ b/homework/before_class2_homework.html
@@ -12,23 +12,25 @@
 <body>
     <div class="container">
         <header class="header">
-            <nav class="navbar">
+            <div class="wrap">
                 <a href="#">
                     <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/f70f00178a7f0baa31e9c01634303d8562cfe93a/student-week1/logo-all-dark.svg"
                         alt="logo" class="logo">
                 </a>
-                <ul class="menu">
-                    <li><a href="#">首頁</a></li>
-                    <li><a href="#">甜點</a></li>
-                    <li><a href="#">登入</a></li>
-                </ul>
-                <a href="#">
-                    <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/shopping_cart.png?raw=true"
-                        alt="shoppingcart" class="shoppingcart">
-                </a>
-            </nav>
+                <nav class="navbar">
+                    <ul class="menu">
+                        <li><a href="#">首頁</a></li>
+                        <li><a href="#">甜點</a></li>
+                        <li><a href="#">登入</a></li>
+                    </ul>
+                    <a href="#">
+                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/shopping_cart.png?raw=true"
+                            alt="shoppingcart" class="shoppingcart">
+                    </a>
+                </nav>
+            </div>
             <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/banner.png?raw=true"
-                alt="" class="banner">
+                alt="banner" class="banner">
         </header>
         <main class="main">
             <div class="items">
@@ -54,10 +56,10 @@
                                 <span class="mark bg-3F5D45">本日精選</span>
                             </div>
                             <div class="detail">
-                                <span class="name">焦糖馬卡龍</span>
-                                <span class="NT">NT$ 450</span>
+                                <h3 class="name">焦糖馬卡龍</h3>
+                                <p class="NT">NT$ 450</p>
                             </div>
-                            <a href="#" class="addcart bg-EAF0ED">加入購物車</a>
+                            <button class="addcart bg-EAF0ED">加入購物車</button>
                         </li>
                         <li>
                             <div class="photo">
@@ -70,10 +72,10 @@
                                 <span class="mark bg-3F5D45">本日精選</span>
                             </div>
                             <div class="detail">
-                                <span class="name">焦糖馬卡龍</span>
-                                <span class="NT">NT$ 450</span>
+                                <h3 class="name">焦糖馬卡龍</h3>
+                                <p class="NT">NT$ 450</p>
                             </div>
-                            <a href="#" class="addcart bg-EAF0ED">加入購物車</a>
+                            <button class="addcart bg-EAF0ED">加入購物車</button>
                         </li>
                         <li>
                             <div class="photo">
@@ -86,10 +88,10 @@
                                 <span class="mark bg-3F5D45">本日精選</span>
                             </div>
                             <div class="detail">
-                                <span class="name">焦糖馬卡龍</span>
-                                <span class="NT">NT$ 450</span>
+                                <h3 class="name">焦糖馬卡龍</h3>
+                                <p class="NT">NT$ 450</p>
                             </div>
-                            <a href="#" class="addcart bg-EAF0ED">加入購物車</a>
+                            <button class="addcart bg-EAF0ED">加入購物車</button>
                         </li>
                         <li>
                             <div class="photo">
@@ -102,10 +104,10 @@
                                 <span class="mark bg-3F5D45">本日精選</span>
                             </div>
                             <div class="detail">
-                                <span class="name">焦糖馬卡龍</span>
-                                <span class="NT">NT$ 450</span>
+                                <h3 class="name">焦糖馬卡龍</h3>
+                                <p class="NT">NT$ 450</p>
                             </div>
-                            <a href="#" class="addcart bg-EAF0ED">加入購物車</a>
+                            <button class="addcart bg-EAF0ED">加入購物車</button>
                         </li>
                         <li>
                             <div class="photo">
@@ -118,10 +120,10 @@
                                 <span class="mark bg-3F5D45">本日精選</span>
                             </div>
                             <div class="detail">
-                                <span class="name">焦糖馬卡龍</span>
-                                <span class="NT">NT$ 450</span>
+                                <h3 class="name">焦糖馬卡龍</h3>
+                                <p class="NT">NT$ 450</p>
                             </div>
-                            <a href="#" class="addcart bg-EAF0ED">加入購物車</a>
+                            <button class="addcart bg-EAF0ED">加入購物車</button>
                         </li>
                         <li>
                             <div class="photo">
@@ -134,10 +136,10 @@
                                 <span class="mark bg-3F5D45">本日精選</span>
                             </div>
                             <div class="detail">
-                                <span class="name">焦糖馬卡龍</span>
-                                <span class="NT">NT$ 450</span>
+                                <h3 class="name">焦糖馬卡龍</h3>
+                                <p class="NT">NT$ 450</p>
                             </div>
-                            <a href="#" class="addcart bg-EAF0ED">加入購物車</a>
+                            <button class="addcart bg-EAF0ED">加入購物車</button>
                         </li>
                     </ul>
                 </div>
