--- a/try.html
+++ b/try.html
@@ -11,46 +11,12 @@
 </head>
 
 <body>
-    <div class="dessert_menu">
-        <ul class="dessert">
-            <li>
-                <div class="phpto">
-                    <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-1.png?raw=true"
-                        alt="dessert_photo" class="p">
-                    <a href="#">
-                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
-                            alt="heart" class="heart">
-                    </a>
-                    <span class="mark bg-3F5D45">本日精選</span>
-                </div>
-            </li>
-            <li>
-                <div class="phpto">
-                    <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-1.png?raw=true"
-                        alt="dessert_photo" class="p">
-                    <a href="#">
-                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
-                            alt="heart" class="heart">
-                    </a>
-                    <span class="mark bg-3F5D45">本日精選</span>
-                </div>
-            </li>
-            <li>
-                <div class="phpto">
-                    <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/p-1.png?raw=true"
-                        alt="dessert_photo" class="p">
-                    <a href="#">
-                        <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/student-week1/favorite_border.png?raw=true"
-                            alt="heart" class="heart">
-                    </a>
-                    <span class="mark bg-3F5D45">本日精選</span>
-                </div>
-            </li>
-        </ul>
+    <div class="container">
+        <h1>
+            <a href="#">Hex School</a>
+        </h1>
+
     </div>
-
-
-
 
 </body>
 
