--- a/weektwo.html
+++ b/weektwo.html
@@ -34,7 +34,7 @@
                     <p class="name">William</p>
                     <a href="#" class="contant d-flex aic fz-s">
                         contact me
-                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023week2/arrow_outward-white.png"
+                        <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9f843c654f4bbfb95e6ab2eaf0c5a42f2c3c6205/2023week2/arrow_outward.svg"
                             alt="arrow_outward">
                     </a>
                 </div>
