--- a/weektwo.html
+++ b/weektwo.html
@@ -75,7 +75,7 @@
         </div>
         <div class="about">
             <div class="container d-flex aic">
-                <ul class="items d-flex gap-m">
+                <ol class="items d-flex gap-m">
                     <li>
                         <h4 class="item_no">01</h4>
                         <h3 class="item_title">Attention to Detail</h3>
@@ -96,7 +96,7 @@
                         <h3 class="item_title">Team Player</h3>
                         <p class="item_content fz-s">Collaborates and shares ideas.</p>
                     </li>
-                </ul>
+                </ol>
                 <div class="about_me">
                     <h2 class="title">About Me</h2>
                     <p class="content">
@@ -110,21 +110,29 @@
         </div>
         <div class="contact_me">
             <div class="container d-flex aic">
-                <h2 class="title">CONTACT ME</h2>
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/trending_flat_black_24dp%201.png?raw=true"
-                    alt="trending_flat_black">
+                <div class="contact d-flex">
+                    <h2 class="title">CONTACT ME</h2>
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/trending_flat_black_24dp%201.png?raw=true"
+                        alt="trending_flat_black">
+                </div>
                 <ul class="icons d-flex">
                     <li class="active">
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/discord.png?raw=true"
-                            alt="discord">
+                        <a href="#">
+                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/discord.png?raw=true"
+                                alt="discord">
+                        </a>
                     </li>
                     <li>
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/instagram.png?raw=true"
-                            alt="instagram">
+                        <a href="#">
+                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/instagram.png?raw=true"
+                                alt="instagram">
+                        </a>
                     </li>
                     <li>
-                        <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/message.png?raw=true"
-                            alt="message">
+                        <a href="#">
+                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/message.png?raw=true"
+                                alt="message">
+                        </a>
                     </li>
                 </ul>
             </div>
