--- a/weektwo.html
+++ b/weektwo.html
@@ -149,14 +149,14 @@
                         <div class="projects_content d-flex gap-m">
                             <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/Rectangle%2015.png?raw=true"
                                 alt="Projects_photo_two">
-                            <div class="d-flex">
+                            <div class="d-flexc">
                                 <p class="projects_text fz-s">
                                     I've worked on a variety of websites, including e-commerce sites, blogs, and
                                     landing pages. I take pride in creating clean, efficient, and user-friendly
                                     code.
                                 </p>
-                                <span class="see_more">
-                                    <a href="#">
+                                <span class="see_more d-flex">
+                                    <a href="#" class="d-flex aic">
                                         SEE MORE
                                         <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/arrow_outward-white.png?raw=true"
                                             alt="arrow_outward-white">
