--- a/try.html
+++ b/try.html
@@ -1,55 +1,78 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/css_reset.css">
-    <link rel="stylesheet" href="css/try.css">
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
-    <!-- action 路徑 method方法 -->
-    <form action="try.html" method="get">
-        <label for="emailla">email</label>
-        <!-- 使用input需要有對應的label，不可只使用placeholder，for要搭配id，就可以點選label指示到相對應的輸入框 -->
-        <!-- input有很多種type，要記得一些常用，不常用submit -->
-        <input type="text" id="emailla" placeholder="input email">
-        <!-- button一定要下type，預設值是submit -->
-        <button type="submit">哈囉</button>
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                Featured
+                <i class="bi bi-three-dots-vertical dropdown-toggle" data-bs-toggle="dropdown"></i>
+            </div>
 
-        <br>
+            <div class=" card-body">
+                <div class="d-flex">
+                    <div class="flex-shrink-0">
+                        <img src="https://fakeimg.pl/64/" alt="fakeimg">
+                    </div>
+                    <div class="flex-grow-1 ms-3">
+                        This is some content from a media component. You can replace this with any content and
+                        adjust it
+                        as
+                        needed.
+                    </div>
 
-        <!-- 不推薦的寫法，將input直接包在label裡面 -->
-        <label for="chicken1">
-            <input type="checkbox" value="chicken1" name="like" id="chicken1">
-            雞肉one
-        </label>
-
-        <!-- 推薦的寫法，利用for跟ID相對應 -->
-        <input type="checkbox" name="like" value="chicken2" id="chicken2">
-        <label for="chicken2">雞肉two</label>
-        <!-- 單選 -->
-        <input type="radio" name="ilike" value="牛肉" id="beef">
-        <label for="beef">牛肉</label>
-        <input type="radio" name="ilike" value="豬肉" id="pork">
-        <label for="pork">豬肉</label>
-        <input type="radio" name="ilike" value="麵" id="noodle">
-        <label for="noodle">麵</label>
-        <!-- 下拉式選單 -->
-        <label for="area">縣市</label>
-        <select name="area" id="area">
-            <option value="高雄市">高雄市</option>
-            <option value="台南市">台南市</option>
-            <option value="嘉義市">嘉義市</option>
-            <option value="台北市">台北市</option>
-        </select>
+                </div>
+            </div>
+        </div>
 
 
-    </form>
 
+
+
+    </div>
+    <!-- Default dropstart button -->
+    <div class="btn-group dropstart">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropstart
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+    </div>
+
+    <!-- Split dropstart button -->
+    <div class="btn-group dropstart">
+        <button type="button" class="dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown">
+            <i class="bi bi-three-dots-vertical"></i>
+            <span class="visually-hidden">Toggle Dropstart</span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+        <button type="button" class="btn btn-secondary">
+            Split dropstart
+        </button>
+    </div>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
