--- a/weekseven.html
+++ b/weekseven.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>主線任務七</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/css_reset.css">
     <link rel="stylesheet" href="css/weekone.css">
 </head>
@@ -12,30 +13,30 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="h1">VITO</h1>
+            <h1 class="h1" data-aos="fade-up">VITO</h1>
             <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week1/vito.png?raw=true"
                 alt="vito" class="photo">
-            <h2 class="h2">RESUME</h2>
+            <h2 class="h2" data-aos="fade-down">RESUME</h2>
         </header>
     </div>
+    <div class="overflow-fidden">
+        <div class="intro" data-aos="fade-left" data-aos-duration="400" overflow="">
+            <div class="container">
+                <p>
+                    I'm Vito, a UI Designer with 5+ years of experience. I create visually appealing interfaces for web
+                    and
+                    mobile apps. Proficient in Sketch, Adobe XD, Figma, HTML, CSS, and JavaScript. I enjoy collaborating
+                    with others to create high-quality products.
+                </p>
+            </div>
 
-
-
-
-    <div class="intro">
-        <div class="container">
-            <p>
-                I'm Vito, a UI Designer with 5+ years of experience. I create visually appealing interfaces for web and
-                mobile apps. Proficient in Sketch, Adobe XD, Figma, HTML, CSS, and JavaScript. I enjoy collaborating
-                with others to create high-quality products.
-            </p>
         </div>
-
     </div>
+
     <div class="container">
         <main class="main">
             <div class="card">
-                <h3 class="item_title">Vito Evans</h3>
+                <h3 class="item_title" data-aos="fade-right">Vito Evans</h3>
                 <ul class="item_content">
                     <li class="mb-8">456 Walnut Avenue, Someville, USA</li>
                     <li class="mb-8"><a href="tel:+1 123 456 7890">+1 123 456 7890</a></li>
@@ -44,7 +45,7 @@
                 </ul>
             </div>
             <div class="card">
-                <h3 class="item_title">Education</h3>
+                <h3 class="item_title" data-aos="fade-right">Education</h3>
                 <ul class="item_content">
                     <li class="mb-16">
                         <p class="year">2014-2018</p>
@@ -61,7 +62,7 @@
                 </ul>
             </div>
             <div class="card">
-                <h3 class="item_title">Work</h3>
+                <h3 class="item_title" data-aos="fade-right">Work</h3>
                 <ul class="item_content">
                     <li class="mb-16">
                         <p class="year">2018-2021</p>
@@ -78,7 +79,7 @@
                 </ul>
             </div>
             <div class="card">
-                <h3 class="item_title">Awards</h3>
+                <h3 class="item_title" data-aos="fade-right">Awards</h3>
                 <ul class="item_content">
                     <li class="mb-12">Best in Show Award, National Advertising Awards, 2020</li>
                     <li class="mb-12">Honorable Mention, International Design Competition, 2019</li>
@@ -111,7 +112,8 @@
         </ul>
 
     </footer>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
