--- a/weekseven.html
+++ b/weekseven.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>主線任務七</title>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/css_reset.css">
-    <link rel="stylesheet" href="css/weekone.css">
+    <link rel="stylesheet" href="css/weekseven.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         </header>
     </div>
     <div class="overflow-fidden">
-        <div class="intro" data-aos="fade-left" data-aos-duration="400" overflow="">
+        <div class="intro" data-aos="fade-left" data-aos-mirror="true">
             <div class="container">
                 <p>
                     I'm Vito, a UI Designer with 5+ years of experience. I create visually appealing interfaces for web
@@ -112,7 +112,7 @@
         </ul>
 
     </footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
