--- a/homework/wholepage_flex.html
+++ b/homework/wholepage_flex.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLEX練習</title>
-    <link rel="stylesheet" href="css/wholepage_flex.css">
     <link rel="stylesheet" href="css/css_reset.css">
+    <link rel="stylesheet" href="css/wholepage_flex.css">
 </head>
 
 <body>
@@ -75,6 +75,75 @@
                     </div>
                 </li>
             </ul>
+            <table class="compare">
+                <caption class="caption">線上及實體課程差異</caption>
+                <tr class="compare_tr">
+                    <th class="compare_th">項目</th>
+                    <th class="compare_th">Hex School線上課程</th>
+                    <th class="compare_th">一般線上課程</th>
+                    <th class="compare_th">實體課程</th>
+                </tr>
+                <tr class="compare_tr">
+                    <td class="compare_td">費用</td>
+                    <td class="compare_td mark">較低</td>
+                    <td class="compare_td mark">較低</td>
+                    <td class="compare_td">較高</td>
+                </tr>
+                <tr class="compare_tr">
+                    <td class="compare_td">學習效果</td>
+                    <td class="compare_td">一般</td>
+                    <td class="compare_td mark">較低</td>
+                    <td class="compare_td mark">很好</td>
+                </tr>
+                <tr class="compare_tr">
+                    <td class="compare_td">Code review</td>
+                    <td class="compare_td mark">有</td>
+                    <td class="compare_td">無</td>
+                    <td class="compare_td">不一定</td>
+                </tr>
+                <tr class="compare_tr">
+                    <td class="compare_td">課程更新速度</td>
+                    <td class="compare_td mark">普通</td>
+                    <td class="compare_td mark">普通</td>
+                    <td class="compare_td">較慢</td>
+                </tr>
+                <tr class="compare_tr">
+                    <td class="compare_td">多次複習</td>
+                    <td class="compare_td mark">可</td>
+                    <td class="compare_td">可</td>
+                    <td class="compare_td">不可</td>
+                </tr>
+                <tr class="compare_tr">
+                    <td class="compare_td">字幕</td>
+                    <td class="compare_td mark">有</td>
+                    <td class="compare_td">不一定</td>
+                    <td class="compare_td">板書</td>
+                </tr>
+            </table>
+
+            <div class="contact">
+                <p class="contact_title">
+                    對我們的課程有興趣嗎？<br>
+                    歡迎留下您的資料
+                </p>
+                <div class="contact_content">
+                    <div class="white">
+
+                    </div>
+                    <form action="index.html" method="get" class="contact_form">
+                        <label for="name">姓名</label>
+                        <input type="text" name="name" id="name" placeholder="六角講師">
+                        <label for="tel">電話</label>
+                        <input type="tel" name="tel" id="tel" placeholder="0912345678">
+                        <label for="email">信箱</label>
+                        <input type="email" name="eamil" id="email" placeholder="hexschool@mail.com">
+                        <button type="submit" value="送出" class="btn">送出</button>
+                    </form>
+                </div>
+
+            </div>
+
+
         </main>
         <footer class="footer">
             <p>六角學院</p>
